--- a/hugo.toml
+++ b/hugo.toml
@@ -48,3 +48,7 @@ enableRobotsTXT = true
     lineNumbersInTable = false
     codeFences = true
 
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
+
