--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -35,7 +35,7 @@ jobs:
     env:
       HUGO_VERSION: 0.147.9
       HUGO_ENVIRONMENT: production
-      TZ: America/Los_Angeles
+      TZ: America/Toronto
     steps:
       - name: Install Hugo CLI
         run: |
